--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HbAppDbConnection": "Server=goclanaforever\\SQLEXPRESS;Database=HomeBankingDB;Trusted_Connection=True;TrustServerCertificate=true"
+    "HbAppDbConnection": "Server=DESKTOP-59900SL\\SQLEXPRESS;Database=HomeBankingDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
